--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,79 +6,76 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:orientation="vertical"
-        android:layout_margin="8dp">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="8dp"
-            android:layout_marginVertical="16dp"
-            android:textAlignment="center"
-            android:textSize="36dp"
-            android:text="Login"></TextView>
-
-        <EditText
-            android:id="@+id/editTextEmailLogin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="8dp"
-            android:layout_marginVertical="16dp"
-            android:hint="@string/hintEnterEmail"
-            android:inputType="textEmailAddress"></EditText>
-
-        <EditText
-            android:id="@+id/editTextPasswordLogin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="8dp"
-            android:layout_marginVertical="16dp"
-            android:hint="@string/hintEnterPassword"
-            android:inputType="textPassword"></EditText>
+        android:layout_centerHorizontal="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:layout_margin="8dp">
 
-            <Button
-                android:id="@+id/buttonLoginAnon"
-                android:layout_width="0dp"
-                android:layout_weight="1"
+            <EditText
+                android:id="@+id/editTextEmailLogin"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
                 android:layout_marginVertical="16dp"
-                android:background="@color/colorLightGrey"
-                android:text="@string/buttonLoginAnon"></Button>
+                android:hint="@string/hintEnterEmail"
+                android:inputType="textEmailAddress"></EditText>
 
-            <Button
-                android:id="@+id/buttonLoginUser"
-                android:layout_width="0dp"
-                android:layout_weight="1"
+            <EditText
+                android:id="@+id/editTextPasswordLogin"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
                 android:layout_marginVertical="16dp"
-                android:background="@color/colorPrimary"
-                android:textColor="@color/colorWhite"
-                android:text="@string/buttonLoginUser"></Button>
+                android:hint="@string/hintEnterPassword"
+                android:inputType="textPassword"></EditText>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/buttonLoginAnon"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="8dp"
+                    android:layout_marginVertical="16dp"
+                    android:background="@color/colorLightGrey"
+                    android:textColor="@color/colorPrimary"
+                    android:text="@string/buttonLoginAnon"></Button>
+
+                <Button
+                    android:id="@+id/buttonLoginUser"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="8dp"
+                    android:layout_marginVertical="16dp"
+                    android:background="@color/colorPrimary"
+                    android:textColor="@color/colorWhite"
+                    android:text="@string/buttonLoginUser"></Button>
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/textViewNotRegistered"
+                android:text="@string/textViewNotRegistered"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:layout_marginHorizontal="8dp"
+                android:layout_marginVertical="16dp"></TextView>
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/textViewNotRegistered"
-            android:text="@string/textViewNotRegistered"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:layout_marginHorizontal="8dp"
-            android:layout_marginVertical="16dp"></TextView>
-
-    </LinearLayout>
+    </ScrollView>
 
 
 </RelativeLayout>
