--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -45,7 +45,7 @@
 
     </RelativeLayout>
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/searchResult"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -54,7 +54,8 @@
         android:elevation="8dp"
         android:background="@drawable/white_background"
         android:padding="16dp"
-        android:visibility="gone"/>
+        android:visibility="visible"></androidx.recyclerview.widget.RecyclerView>
+
 
 
 </RelativeLayout>
