--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/maps_constraint_layout">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:map="http://schemas.android.com/apk/res-auto"
@@ -17,10 +18,12 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginHorizontal="8dp"
         android:elevation="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:background="@drawable/white_background"
+        map:layout_constraintTop_toTopOf="@+id/maps_constraint_layout"
         android:id="@+id/topBarLayout">
 
         <ImageView
@@ -49,23 +52,63 @@
         android:id="@+id/searchRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/topBarLayout"
-        android:layout_marginHorizontal="8dp"
-        android:elevation="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:padding="8dp"
         android:background="@drawable/white_background"
-        android:padding="16dp"
-        android:visibility="gone"></androidx.recyclerview.widget.RecyclerView>
+        android:elevation="8dp"
+        android:visibility="gone"
+        map:layout_constraintTop_toBottomOf="@+id/topBarLayout">
+    </androidx.recyclerview.widget.RecyclerView>
 
     <Button
+        android:id="@+id/showRouteButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/searchRecyclerView"
         android:layout_margin="8dp"
         android:elevation="8dp"
-        android:background="@drawable/white_background"
+        android:background="@drawable/accent_background"
+        android:textColor="@color/colorWhite"
         android:text="navigate"
-        android:id="@+id/showRouteButton"
+        map:layout_constraintBottom_toTopOf="@+id/tripInfoLayout"
+        map:layout_constraintRight_toRightOf="@+id/maps_constraint_layout"
         android:visibility="gone"></Button>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="8dp"
+        android:layout_margin="8dp"
+        android:orientation="vertical"
+        android:background="@drawable/white_background"
+        map:layout_constraintBottom_toBottomOf="@+id/maps_constraint_layout"
+        android:visibility="gone"
+        android:id="@+id/tripInfoLayout">
 
-</RelativeLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="Trip Duration"
+            android:id="@+id/durationTextView"></TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="Trip Distance"
+            android:id="@+id/distanceTextView"></TextView>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:elevation="8dp"
+            android:background="@drawable/primary_background"
+            android:textColor="@color/colorWhite"
+            android:id="@+id/commenceTripButton"
+            android:text="Commence"></Button>
+
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
