--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,6 +49,7 @@
                     android:layout_marginVertical="16dp"
                     android:background="@color/colorLightGrey"
                     android:textColor="@color/colorPrimary"
+                    android:visibility="gone"
                     android:text="@string/buttonLoginAnon"></Button>
 
                 <Button
@@ -58,7 +59,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="8dp"
                     android:layout_marginVertical="16dp"
-                    android:background="@color/colorPrimary"
+                    android:background="@drawable/primary_background"
                     android:textColor="@color/colorWhite"
                     android:text="@string/buttonLoginUser"></Button>
 
