--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
                 android:layout_marginVertical="16dp"
-                android:background="@color/colorPrimary"
+                android:background="@drawable/primary_background"
                 android:textColor="@color/colorWhite"
                 android:text="@string/buttonRegisterUser"></Button>
 
