--- a/app/src/main/res/layout/layout_trip_list_item.xml
+++ b/app/src/main/res/layout/layout_trip_list_item.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="16dp"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
+    android:layout_marginTop="16dp"
     android:id="@+id/trip_list_item">
 
     <TextView
