Imperial/Metric switch

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -93,7 +93,8 @@
         android:id="@+id/buttonSettingsUpdate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="Update"
+        android:textColor="@color/colorWhite"
         android:background="@drawable/primary_background"
         android:layout_marginTop="32dp"
         app:layout_constraintStart_toStartOf="parent"
